2010-02-26  Noam Rosenthal  <noam.rosenthal@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Compile error with 3d-canvas
        Replaced a direct gl call with a getProcAddress call
        https://bugs.webkit.org/show_bug.cgi?id=35448

        No new tests.

        * platform/graphics/qt/GraphicsContext3DQt.cpp:
        (WebCore::GraphicsContext3D::blendColor):

Canonical link: https://commits.webkit.org/46632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55331 268f45cc-cd09-0410-ab3c-d52691b4dbfc